<resources>
    <string name="app_name">Carga de Dedicaciones</string>
    <string name="input_user">username</string>
    <string name="button_login">Login</string>
    <string name="title_activity_dedicacion_vew">dedicacion_vew</string>
    <string name="title_projects">Dedicaciones a Proyectos</string>
    <string name="title_table_column_project">Proyecto</string>
    <string name="title_table_column_dedicacion">Dedicacion</string>
    <string name="button_cargar_dedicacion">Cargar</string>
    <string name="action_settings">Settings</string>
    <string name="message_succes">Su dedicacion para este periodo fue cargada de manera exitosa</string>
    <string name="button_exit">Salir</string>
    <string name="title_comments">Comentarios</string>
    <string name="todo">TODO</string>
    <string name="hint_comment">Agrega un comentario</string>
    <string name="periodo_template">Perido MM/YYYY</string>
    <string name="hours_template">XXX Horas</string>
    <string name="colaborador_template">Full Name</string>
    <string name="project_name_template">Project Name</string>
    <string name="default_value">0</string>
    <string name="button_historic">Ver Historico</string>
    <string name="title_horas_estimadas">Estimadas</string>
    <string name="title_horas_cargadas">Cargadas</string>
    <string name="title_periodo">Periodo</string>
    <string name="title_horas">Horas</string>
    <string name="title_historico_dedicaciones">Historico de Dedicaciones</string>
</resources>
