<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="45dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2_hor" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="152dp" />

    <TextView
        android:id="@+id/periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/periodo_template"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2_hor"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_hor" />

    <TextView
        android:id="@+id/horasEstimadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hours_template"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2_hor"
        app:layout_constraintEnd_toStartOf="@+id/guideline2_ver"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver"
        app:layout_constraintTop_toTopOf="@+id/guideline_hor" />

    <TextView
        android:id="@+id/horasCargadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hours_template"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2_hor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2_ver"
        app:layout_constraintTop_toTopOf="@+id/guideline_hor" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="281dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_comments"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horasEstimadas" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_comment"
        android:textSize="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_comment"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>